# hightly-remote-desktop

./: .gitignore  Cargo.toml  README.md  index.html
client/: package.json
client/app/: index.js  main.dev.js  menu.js
examples/: client-prototype.html
src/: input.rs  main.rs  test.js
static/components/: buttons.html  nav.html
static/javascripts/: main.js
static/layouts/: body.html
static/styles/: main.css
