[package]
name = "hightly-remote-desktop"
version = "0.1.0"
authors = ["Semreg <vchabaniuk@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# linking with `/usr/bin/x86_64-w64-mingw32-gcc`
[dependencies]
urlencoding = "1.0"
web-view = "0.5.0"
webview-sys = "0.2.0"
boxfnonce = "0.1"
webbrowser = "0.5.2"
enigo = "0.0.13"
ws = "0.9.0"
env_logger = "0.7.0"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
custom_derive = "0.1.7"
enum_derive = "0.1.7"
base64 = "0.10.1"

[features]
edge = ["webview-sys/edge"]
